--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -34,8 +34,8 @@
             <div class="navbar-list__user">
                 <i class="bi bi-person-circle user-img"></i>
                 <div class="navbar-list__sesion">
-                    <a href="./pages/login.html" class="navbar-list__login">Iniciar Sesión</a>
-                    <a href="./pages/register.html" class="navbar-list__register">Registrarme</a>
+                    <a href="./login.html" class="navbar-list__login">Iniciar Sesión</a>
+                    <a href="./register.html" class="navbar-list__register">Registrarme</a>
                 </div>
             </div>
         </nav>
@@ -43,20 +43,21 @@
         <a href="../index.html"><i class="bi bi-cart" id="toggle-cart"></i></a>
         
     </header>
+    <div id="overlay"></div>
     <!-- Main -->
     <main>
         <section id="about-us">
             <div class="about-us__container">
-                <img src="../assets/img/images.jpg" class="about-us__img" width="100" alt="">
+                <img src="../assets/img/about-us-img.jpg" class="about-us__img" width="100" alt="about-us-img">
                 <div class="about-us__titles">
-                    <h2 class="about-us__titles--text-right">¿Quienes Somos?</h2>
+                    <h2 class="about-us__titles--text-right">¿Quiénes Somos?</h2>
                     <p class="about-us__titles--text-right">Somos una tienda digital que ofrece claves de videojuegos para
                         diferentes plataformas al mejor precio.
                     </p>
                 </div>
             </div>
             <div class="about-us__container">
-                <img src="../assets/img/images.jpg" class="about-us__img" width="100" alt="">
+                <img src="../assets/img/about-us-img.jpg" class="about-us__img" width="100" alt="about-us-img">
                 <div class="about-us__titles">
                     <h2 class="about-us__titles--text-left">¿Por qué creamos la tienda?</h2>
                     <p class="about-us__titles--text-left">En 2020 gracias a la pandemia, muchas personas se quedaron encerradas en sus casas, pasando horas para terminar con el aburrimiento.
@@ -65,10 +66,10 @@
                 </div>
             </div>
             <div class="about-us__container">
-                <img src="../assets/img/images.jpg" class="about-us__img" width="100" alt="">
+                <img src="../assets/img/about-us-img.jpg" class="about-us__img" width="100" alt="about-us-img">
                 <div class="about-us__titles">
-                    <h2 class="about-us__titles--text-right">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores, sit.</h2>
-                    <p class="about-us__titles--text-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate saepe voluptates dignissimos inventore ea tempore repellat accusantium commodi sequi a nam itaque, dolore sit in pariatur nesciunt ratione. Sunt, accusantium!</p>
+                    <h2 class="about-us__titles--text-right">¿Cuál es nuestra misión?</h2>
+                    <p class="about-us__titles--text-right">Ser la tienda digital de videojuegos N°1 a nivel nacional</p>
                 </div>
             </div>
         </section>
@@ -77,7 +78,7 @@
     <footer>
         <!-- Contact -->
         <section class="contact">
-            <h3>Buscanos en nuestras redes</h3>
+            <h3>Búscanos en nuestras redes</h3>
             <ul class="contact__list">
                 <li class="contact__list__item"><a href="#">Facebook <i class="bi bi-facebook"></i></a></li>
                 <li class="contact__list__item"><a href="#">Twitter <i class="bi bi-twitter"></i></a></li>
