--- a/pages/login.html
+++ b/pages/login.html
@@ -17,6 +17,14 @@
     <link rel="stylesheet" href="../assets/style/mediaqueries.css">
     <link rel="stylesheet" href="../assets/style/login-register.css">
     <link rel="stylesheet" href="../assets/style/animations.css">
+    <!-- Alertify -->
+    <!-- JavaScript -->
+    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
+    <!-- Default theme -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
+    
     <!-- Titulo -->
     <title>Iniciar Sesión</title>
 </head>
@@ -34,14 +42,15 @@
             <div class="navbar-list__user">
                 <i class="bi bi-person-circle user-img"></i>
                 <div class="navbar-list__sesion">
-                    <a href="./pages/login.html" class="navbar-list__login">Iniciar Sesión</a>
-                    <a href="./pages/register.html" class="navbar-list__register">Registrarme</a>
+                    <a href="#" class="navbar-list__login">Iniciar Sesión</a>
+                    <a href="./register.html" class="navbar-list__register">Registrarme</a>
                 </div>
             </div>
         </nav>
         <a href="../index.html"><img src="../assets/img/Logo.png" class="logo" alt="Logo"></a>
         <a href="../index.html"><i class="bi bi-cart" id="toggle-cart"></i></a>
     </header>
+    <div id="overlay"></div>
     <!-- Main -->
     <main>
         <section id="register">
@@ -78,7 +87,7 @@
     <footer>
         <!-- Contact -->
         <section class="contact">
-            <h3>Buscanos en nuestras redes</h3>
+            <h3>Búscanos en nuestras redes</h3>
             <ul class="contact__list">
                 <li class="contact__list__item"><a href="#">Facebook <i class="bi bi-facebook"></i></a></li>
                 <li class="contact__list__item"><a href="#">Twitter <i class="bi bi-twitter"></i></a></li>
