--- a/pages/support.html
+++ b/pages/support.html
@@ -43,6 +43,7 @@
         <a href="../index.html"><i class="bi bi-cart" id="toggle-cart"></i></a>
         
     </header>
+    <div id="overlay"></div>
     <!-- Main -->
     <main>
         <section id="faq">
@@ -50,7 +51,7 @@
             <ul class="faq__list">
                 <li class="faq__list__item">
                     <h3 class="item__title">Métodos de pago <i class="bi bi-arrow-down arrow"></i></h3>
-                    <p hidden>Aceptamos tarjetas de crédito, débito visa o mastecard, y también por paypal</p>
+                    <p hidden>Aceptamos tarjetas de crédito, débito Visa o MasterCard, y también por PayPal</p>
                 </li>
                 <li class="faq__list__item">
                     <h3 class="item__title">Plataformas en las que trabajamos <i class="bi bi-arrow-down arrow"></i></h3>
@@ -71,7 +72,7 @@
     <footer>
         <!-- Contact -->
         <section class="contact">
-            <h3>Buscanos en nuestras redes</h3>
+            <h3>Búscanos en nuestras redes</h3>
             <ul class="contact__list">
                 <li class="contact__list__item"><a href="#">Facebook <i class="bi bi-facebook"></i></a></li>
                 <li class="contact__list__item"><a href="#">Twitter <i class="bi bi-twitter"></i></a></li>
