--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -17,6 +17,13 @@
     <link rel="stylesheet" href="../assets/style/mediaqueries.css">
     <link rel="stylesheet" href="../assets/style/wishlist.css">
     <link rel="stylesheet" href="../assets/style/animations.css">
+    <!-- Alertify -->
+    <!-- JavaScript -->
+    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
+    <!-- Default theme -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
     <!-- Titulo -->
     <title>Lista de Deseados</title>
 </head>
@@ -43,20 +50,23 @@
         <a href="../index.html"><i class="bi bi-cart" id="toggle-cart"></i></a>
         
     </header>
+    <div id="overlay"></div>
     <!-- Main -->
     <main>
         <section id="wishlist">
             <h2>LISTA DE DESEADOS</h2>
+            <p class="empty-list">La lista esta vacía...</p>
             <ul class="wishlist-container">
                 
             </ul>
+            <button class="btn btn--deleteAllWishGames">Eliminar todos los juegos</button>
         </section>
     </main>
     <!-- Footer -->
     <footer>
         <!-- Contact -->
         <section class="contact">
-            <h3>Buscanos en nuestras redes</h3>
+            <h3>Búscanos en nuestras redes</h3>
             <ul class="contact__list">
                 <li class="contact__list__item"><a href="#">Facebook <i class="bi bi-facebook"></i></a></li>
                 <li class="contact__list__item"><a href="#">Twitter <i class="bi bi-twitter"></i></a></li>
