hero carousel animation - bubble cart

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
             </div>
         </nav>
         <a href="#"><img src="./assets/img/Logo.png" class="logo" alt="Logo"></a>
-        <i class="bi bi-cart" id="toggle-cart"></i>
+        <div class="toggle-cart-container">
+            <i class="bi bi-cart" id="toggle-cart"></i>
+            <span class="cart-bubble">1</span>
+        </div>
         <div class="cart-menu">
             <div class="cart-menu-container">
                 <p class="empty-cart-text show">El carrito esta vacío...</p>
